--- a/index.html
+++ b/index.html
@@ -165,20 +165,20 @@
             <div class="container">
                 <!--start footer-up-->
                 <div class="up">
-                    <div class="box">
-                        <img src="images/61e7601611ab8777e585cad3_Wuilt Logo Full Colored.svg" alt="image">
+                    <div class="box one">
+                        <img src="images/61e7601611ab8777e585cad3_Wuilt Logo Full Colored.svg" class="logo" alt="image">
                         <p>هدف ويلت هو توفير وقتك لتنمية مشروعك من خلال إطلاق متجرك الإلكتروني بنجاح وزيادة أرباحك ومضاعفة مبيعاتك</p>
                         <ul>
-                            <li><i class="fa-brands fa-facebook-f"></i></li>
-                            <li><i class="fa-brands fa-twitter"></i></li>
-                            <li><i class="fa-brands fa-instagram"></i></li>
-                            <li><i class="fa-brands fa-linkedin-in"></i></li>
-                            <li><i class="fa-brands fa-youtube"></i></li>
+                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
                         </ul>
                         <img src="images/621b47ada8b443155c36749a_Accepted payment providers.svg" alt="image">
                     </div>
                     <div class="box">
-                        <h5>ويلت</h5>
+                        <h4>ويلت</h4>
                         <ul>
                             <li><a>الرئيسية</a></li>
                             <li><a>عنّا</a></li>
@@ -189,6 +189,7 @@
                     </div>
                     <div class="box">
                         <ul>
+                            <h4 style="visibility: hidden ;">ويلت</h4>
                             <li><a>الوظائف</a></li>
                             <li><a>سوّق بالعمولة</a></li>
                             <li><a>أسئلة متكررة</a></li>
@@ -197,7 +198,7 @@
                         </ul>
                     </div>
                     <div class="box">
-                        <h5>المصادر</h5>
+                        <h4>المصادر</h4>
                         <ul>
                             <li><a>المدونة</a></li>
                             <li><a>مركز المساعدة</a></li>
@@ -205,7 +206,7 @@
                         </ul>
                     </div>
                     <div class="box">
-                        <h5>تواصل معنا</h5>
+                        <h4>تواصل معنا</h4>
                         <a href="mailto:info@wuilt.com">
                             <div>
                                 <img src="images/614319338322d2748cb4de36_icon-1-support-footer-saaslify-template.svg" alt="image">
